Update create business to allow linking and creation, Update server to respawn JWT with updated code claims upon linking or creation. Fix manager redirects upon logging in. Update manager home page.

--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -21,6 +21,7 @@ img{
 
 .home-header h1 {
   margin-top: 0;
+  color: black
 }
 
 .content-wrapper {
@@ -84,3 +85,4 @@ img{
   border: none;
   padding: 0;
 }
+
